# s500-fc-sim

./: .gitignore  README.md  drone spec
config/: s500_config.yaml
launch/: gazebo_sim.launch.py
src/flight_controller/: CMakeLists.txt  package.xml
src/flight_controller/include/flight_controller/: flight_controller_node.hpp  imu_processor.hpp  motor_mixer.hpp  pid_controller.hpp
src/flight_controller/src/: flight_controller_node.cpp  imu_processor.cpp  motor_mixer.cpp  pid_controller.cpp
urdf/: s500_quadcopter.gazebo  s500_quadcopter.urdf  s500_quadcopter_expanded.urdf
worlds/: empty.world
